Closed
Bug 376636
Opened 19 years ago
Closed 19 years ago
Building with GCC-4.3 and '-pedantic' fail due to extra semi-colons and missing newlines
Categories
(Firefox Build System :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: ahaas, Unassigned)
References
Details
(Keywords: fixed1.8.1.22)
Attachments
(1 file, 2 obsolete files)
|
25.95 KB,
application/x-gzip
|
Details |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a4pre) Gecko/20070405 SeaMonkey/1.5a
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a4pre) Gecko/20070405 SeaMonkey/1.5a
Hi.
The development version of GCC has changed various warnings to errors if the '-pedantic' flag is used. Numerous files in the Mozilla tree have extra ';' characters and at least one file does not end with a newline. These problems now result in build failures.
Reproducible: Always
Steps to Reproduce:
1. Install GCC-4.3 development snapshot
2. Try to build Mozilla/SeaMonkey/Firefox
3. See build go boom!
Actual Results:
Build failed. :-(
Expected Results:
Build succeeds: :-)
I will attach a large patch that fixed the build problems on my machine (Fedora Rawhide and GCC-4.3 from 04/04/07).
The patch touches a large number of files in various directories, but the majority of the individual patches are usually just a few lines long and are the removal of ';' characters.
Comment 2•19 years ago
|
||
Could you make that one big patch (use cvs diff -u) and attach the patch file instead of a tar? It's much easier to take a look at that way.
Summary: Building with GCC-4.3 and '-pedantic' fail due to extra semi-colors and missing newlines → Building with GCC-4.3 and '-pedantic' fail due to extra semi-colons and missing newlines
Updated•19 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Product: Mozilla Application Suite → Core
Hi.
My attachment is a single file. My description above is not clear when I read now what I wrote a couple of minutes ago. Sorry about that. The 'diffs.gz' file is the output of a 'cvs diff -u' command as you suggested.
Attachment #260749 -
Attachment mime type: application/x-tar → application/x-gzip
In the initial patch I removed some other changes that are in my tree and carelessly removed these changes to three other files needing editing. This patch contains the fixes for these three files.
Here's an updated patch based on the tree from a day or two ago. The patch is a single file containing the output of 'cvs diff -u' and it is compressed due to size.
Attachment #260749 -
Attachment is obsolete: true
Attachment #260846 -
Attachment is obsolete: true
Comment 6•19 years ago
|
||
Fixed on trunk (rs=me)
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Updated•8 years ago
|
Product: Core → Firefox Build System
You need to log in
before you can comment on or make changes to this bug.
Description
•